# dask-gateway

./: .buildinfo  .coveragerc  .doctr-files  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  SKAFFOLD.md  api-client.html  api-server.html  authentication.html  changelog.html  cluster-options.html  configuration-user.html  dask-gateway-dev.yaml  dev-environment.yaml  develop.html  genindex.html  github_deploy_key_dask_dask_gateway.enc  github_deploy_key_jcrist_dask_gateway.enc  index.html  install-hadoop.html  install-jobqueue.html  install-kube.html  install-local.html  install-user.html  installation.html  logging.go  main.go  objects.inv  pyproject.toml  (+11 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build-and-push-dask-gateway-server.yaml  build-publish-docs.yaml  build-publish-helm-chart.yaml  build-publish-images.yaml  build-publish-python-packages.yaml  docs.yaml  local.yaml  publish-images.yaml  pypi.yml  refreeze-dockerfile-requirements-txt.yaml  test.yaml  test_docker.yaml
_sources/: api-client.rst.txt  api-server.rst  api-server.rst.txt  authentication.rst  authentication.rst.txt  changelog.md.txt  changelog.rst.txt  cluster-options.rst.txt  configuration-user.rst  develop.rst  develop.rst.txt  index.rst  index.rst.txt  install-hadoop.rst  install-hadoop.rst.txt  install-jobqueue.rst  install-jobqueue.rst.txt  install-kube.rst  install-kube.rst.txt  install-local.rst.txt  install-user.rst  installation.rst.txt  quickstart.rst.txt  security.rst.txt  usage.rst.txt
_static/: alabaster.css  documentation_options.js
_static/css/: style.css
configurable-tls-proxy/: README.md  logging.go  main.go
continuous_integration/: before_install.sh  install.sh
continuous_integration/docker/: README.md  build.sh  push.sh  retag.sh  tagdate.sh
continuous_integration/kubernetes/: build-publish-helm-chart.sh  deploy.sh  helm-install.sh  helm-lint-and-template.sh  install-internal.sh  install-k3d.sh  install-minikube.sh  install-tools.sh  install.sh  k3d-create.sh  script-internal.sh  script.sh  start.sh  test_config.yaml
dask-gateway/: .dockerignore  Dockerfile  Dockerfile.requirements.in  Dockerfile.requirements.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
dask-gateway-k8s-operator/: OPERATOR_DEVELOPMENT.md  go.mod  go.sum
dask-gateway-k8s-operator/build_tools/: reformat_crds.py
dask-gateway-k8s-operator/deploy/: operator.yaml  role.yaml  role_binding.yaml  service_account.yaml
dask-gateway-proxy/: fail_without_go_1_12.go  logging.go  main.go  router.go  router_test.go  schedulerproxy.go  utils.go  webproxy.go
dask-gateway-server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.requirements.in  Dockerfile.requirements.txt  MANIFEST.in  README.rst  hatch_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
dask-gateway-server/build_tools/: README.md  build_macos.py  build_manylinux.py
dask-gateway-server/dask-gateway-proxy/: README.md  fail_without_go_1_12.go  go.mod  go.sum  logging.go  main.go  router.go  router_test.go  rpc.go  schedulerproxy.go  sni.go  utils.go  webproxy.go
dask-gateway-server/dask-gateway-proxy/cmd/dask-gateway-proxy/: main.go
dask-gateway-server/dask-gateway-proxy/internal/: logging.go  router.go
dask-gateway-server/dask-gateway-proxy/internal/logging/: logging.go
dask-gateway-server/dask-gateway-proxy/pkg/: router_test.go
dask-gateway-server/dask-gateway-proxy/pkg/router/: router.go  router_test.go
dask-gateway-server/dask-gateway-proxy/pkg/sni/: sni.go
dask-gateway-server/dask-gateway-proxy/tools/: fail_without_go_1_12.go
dask-gateway-server/dask_gateway_server/: __init__.py  _version.py  app.py  auth.py  cluster.py  compat.py  handlers.py  limits.py  local_cluster.py  models.py  objects.py  options.py  routes.py  tls.py  traitlets.py  utils.py  workqueue.py  yarn_cluster.py
dask-gateway-server/dask_gateway_server/backends/: __init__.py  base.py  db.py  db_base.py  inprocess.py  kubernetes.py  local.py  yarn.py
dask-gateway-server/dask_gateway_server/backends/jobqueue/: base.py  launcher.py  lsf.py  pbs.py  slurm.py
dask-gateway-server/dask_gateway_server/backends/kubernetes/: __init__.py  backend.py  controller.py  utils.py
dask-gateway-server/dask_gateway_server/managers/: __init__.py  base.py  inprocess.py  kubernetes.py  local.py  yarn.py
dask-gateway-server/dask_gateway_server/managers/jobqueue/: base.py  launcher.py  pbs.py  slurm.py
dask-gateway-server/dask_gateway_server/proxy/: __init__.py  base.py  core.py  rpc.py
dask-gateway/dask_gateway/: __init__.py  _compat.py  _version.py  auth.py  client.py  comm.py  config.py  cookiejar.py  dask_cli.py  gateway.yaml  options.py  scheduler_preload.py  utils.py
dask_gateway/: _version.py  app.py  auth.py  client.py  cluster.py  comm.py  dask_cli.py  database.py  handlers.py  local_cluster.py  objects.py  tls.py  utils.py  yarn_cluster.py
dask_gateway/proxy/: core.py
demo/: Dockerfile  README.rst  dask_gateway_config.py  start-demo.sh  stop-demo.sh
demo/dask_config/: gateway.yaml
docs/: Makefile  requirements.txt
docs/source/: api-client.rst  api-server.rst  authentication.rst  backends.rst  changelog.md  changelog.rst  cluster-options.rst  conf.py  develop.rst  index.rst  install-hadoop.rst  install-jobqueue.rst  install.rst  (+11 more)
logs/: apport.podman.9xzar4g7.apport
resources/: README.rst
skaffold/: Dockerfile  SKAFFOLD.md  condarc
tests/: conftest.py  requirements.txt  test_auth.py  test_cli.py  test_client.py  test_client_utils.py  test_cookiejar.py  test_database.py  test_db_backend.py  test_gateway.py  test_kubernetes.py  test_kubernetes_cluster.py  test_limits.py  test_local_backend.py  test_local_cluster.py  test_options.py  test_pbs_backend.py  test_pbs_cluster.py  test_proxies.py  test_slurm_backend.py  test_slurm_cluster.py  test_traitlets.py  test_utils.py  test_workqueue.py  test_yarn_backend.py  test_yarn_cluster.py  utils.py  utils_test.py
(+155 files in other folders)
